--- a/api/src/main/resources/workbench.yaml
+++ b/api/src/main/resources/workbench.yaml
@@ -904,6 +904,8 @@ definitions:
         type: string
       creator:
         type: string
+      googleBucketLink:
+        type: string
       dataAccessLevel:
         $ref: "#/definitions/DataAccessLevel"
       researchPurpose:
