--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -223,7 +223,7 @@ jobs:
           - ui-cache-
       - run:
           working_directory: ~/workbench/ui
-          command: yarn install
+          command: yarn install && yarn codegen
       - save_cache:
           paths:
             - ~/workbench/ui/node_modules
@@ -236,9 +236,9 @@ jobs:
           name: Run Angular tests
           working_directory: ~/workbench/ui
           command: |
-            yarn run codegen && yarn test --no-watch --no-progress --browsers=ChromeHeadless
+            yarn test --no-watch --no-progress --browsers=ChromeHeadless
       - run:
-          name: Build with stricter compilation
+          name: Build with strict compilation
           working_directory: ~/workbench/ui
           command: ./project.rb build --environment test
 
@@ -262,7 +262,7 @@ jobs:
           - ui-cache-
       - run:
           working_directory: ~/workbench/ui
-          command: yarn install
+          command: yarn install && yarn run codegen
       - save_cache:
           paths:
             - ~/workbench/ui/node_modules
