--- a/api/src/main/resources/workbench.yaml
+++ b/api/src/main/resources/workbench.yaml
@@ -203,13 +203,8 @@ paths:
     post:
       tags:
         - profile
-      description: Accepts identity information for verification.
+      description: Request identity verification.
       operationId: submitIdVerification
-      parameters:
-        - in: body
-          name: idVerificationRequest
-          schema:
-            $ref: "#/definitions/IdVerificationRequest"
       responses:
         200:
           description: The user's profile.
