Fix tests and plumb down to ui.

--- a/api/src/main/resources/workbench.yaml
+++ b/api/src/main/resources/workbench.yaml
@@ -1275,6 +1275,8 @@ definitions:
         type: "array"
         items:
           $ref: "#/definitions/InstitutionalAffiliation"
+      requestedIdVerification:
+        type: boolean
 
   InstitutionalAffiliation:
     type: object
