--- a/api/src/main/resources/client_api.yaml
+++ b/api/src/main/resources/client_api.yaml
@@ -122,6 +122,8 @@ definitions:
 
   MaterializeCohortResponse:
     type: object
+    required:
+      - results
     properties:
       results:
         description: >
