--- a/ui/package.json
+++ b/ui/package.json
@@ -9,13 +9,11 @@
     "test": "ng test --sourcemaps=false",
     "lint": "ng lint --type-check",
     "e2e": "ng e2e",
-    "codegen": "yarn run merge-swagger && yarn run codegen-clean && yarn run codegen-swagger && yarn run post-codegen && yarn run public-codegen-swagger && yarn run public-post-codegen",
+    "codegen": "yarn run merge-swagger && yarn run codegen-clean && yarn run codegen-swagger && yarn run post-codegen",
     "merge-swagger": "../api/build.rb merge-yaml",
-    "codegen-clean": "rm -rf src/generated src/publicGenerated",
+    "codegen-clean": "rm -rf src/generated",
     "codegen-swagger": "java -jar ../aou-utils/swagger-codegen-cli.jar generate --lang typescript-angular --input-spec ../api/src/main/resources/merged.yaml --output src/generated --additional-properties ngVersion=2",
     "post-codegen": "sed -i.bak -e 's/OpaqueToken/InjectionToken/' src/generated/variables.ts",
-    "public-codegen-swagger": "java -jar ../aou-utils/swagger-codegen-cli.jar generate --lang typescript-angular --input-spec ../public-api/src/main/resources/public-api.yaml --output src/publicGenerated --additional-properties ngVersion=2",
-    "public-post-codegen": "sed -i.bak -e 's/OpaqueToken/InjectionToken/' src/publicGenerated/variables.ts",
     "coverage": "ng test --sourcemaps=false --watch=false --code-coverage"
   },
   "private": true,
