--- a/api/src/integration/resources/application.properties
+++ b/api/src/integration/resources/application.properties
@@ -9,5 +9,6 @@ workbench.datasource.username=workbench
 workbench.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1;INIT=CREATE SCHEMA IF NOT EXISTS workbench;DB_CLOSE_ON_EXIT=FALSE
 
 liquibase.enabled=false
-cdr.datasource.username=workbench
+cdr.datasource.username=sa
+cdr.datasource.password=sa
 cdr.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1;INIT=CREATE SCHEMA IF NOT EXISTS workbench;DB_CLOSE_ON_EXIT=FALSE
