--- a/api/src/main/resources/client_api.yaml
+++ b/api/src/main/resources/client_api.yaml
@@ -91,7 +91,9 @@ definitions:
       statusFilter:
         description: >
           An array of status values; participants with these statuses will be included.
-          Defaults to [NOT_REVIEWED, INCLUDED, NEEDS_FURTHER_REVIEW] -- everything but EXCLUDED.
+          For table queries, defaults to [NOT_REVIEWED, INCLUDED, NEEDS_FURTHER_REVIEW] --
+          everything but EXCLUDED. For annotation queries, defaults to [INCLUDED, NEEDS_FURTHER_REVIEW];
+          participants that haven't been reviewed yet will not be returned.
           Only valid for use with cohortName (cohorts saved in the database.)
         type: array
         items:
