RW-495 added test cases.

--- a/api/src/main/resources/cb_search_api.yaml
+++ b/api/src/main/resources/cb_search_api.yaml
@@ -305,6 +305,7 @@ definitions:
     required:
       - type
       - searchParameters
+      - modifiers
     properties:
       id:
         description: Unique within the cohort definition
